--- a/Shoes Websit/index.html
+++ b/Shoes Websit/index.html
@@ -638,9 +638,9 @@
         <div class="footer_main">
             <div class="tag">
                 <h1>Contact</h1>
-                <a href="#"><i class="fa-solid fa-house"></i>123/Colombo/Sri Lanka</a>
-                <a href="#"><i class="fa-solid fa-phone"></i>+94 12 345 6789</a>
-                <a href="#"><i class="fa-solid fa-envelope"></i>contact@gmail.com</a>
+                <a href="#"><i class="fa-solid fa-house"></i>Jakarta</a>
+                <a href="#"><i class="fa-solid fa-phone"></i>+021 766 6677</a>
+                <a href="#"><i class="fa-solid fa-envelope"></i>jakartanike@gmail.com</a>
             </div>
 
             <div class="tag">
@@ -653,7 +653,7 @@
 
             <div class="tag">
                 <h1>Our Stores</h1>
-                <a href="#" class="center">Sri Lanka</a>
+                <a href="#" class="center">Indonesia</a>
                 <a href="#" class="center">USA</a>
                 <a href="#" class="center">India</a>
                 <a href="#" class="center">Japan</a>
